# EasyPluginFramework

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_vs2017.bat  module.cmake  module_protobuf.cmake  module_qt.cmake
cmake/: module.cmake  module_protobuf.cmake  module_pugixml.cmake  module_qt.cmake  module_spdlog.cmake  module_vcpkg.cmake  vcpkg.json
doc/: update.md
include/: IFramework.hpp  IPlugin.hpp  Library.hpp  TSingleton.hpp
resources/: Plugins.xml
resources/configs/: plugins.xml
rules/: cpp.mdc
src/: CMakeLists.txt
src/Common/: Any.hpp  IPlugin.hpp  Library.hpp  TSingleton.hpp  Utils.hpp
src/Core/: CMakeLists.txt  main.cpp
src/Core/EventBus/: CMakeLists.txt  EventBus.cpp  GlobalEventBus.hpp  IEvent.hpp  IEventBus.hpp  IEventHandler.hpp  PluginWrapper.h
src/Core/MainWidget/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PluginWidget.cpp  PluginWidget.h  PluginWidget.ui  Subscribe.cpp  Subscribe.h  main.cpp
src/Core/Manager/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  DataManager.cpp  DataManager.h  Framework.cpp  Framework.h  GlobalManager.hpp  LoggerManager.h  PluginManager.cpp  PluginManager.h
src/Manager/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  DataManager.cpp  DataManager.h  GlobalManager.hpp  LoggerManager.cpp  LoggerManager.h  PluginManager.cpp  PluginManager.h
src/Plugin/: CMakeLists.txt
src/Plugin/PluginASN1View/: CMakeLists.txt  GlobalPluginASN1View.hpp  PluginASN1View.cpp  PluginASN1View.h  PluginASN1View.ui
src/Plugin/PluginAsn1Viewer/: CMakeLists.txt  GlobalPluginAsn1Viewer.hpp
src/Plugin/PluginAsn1Viewer/core/: asn1_parser_service.cpp  asn1_parser_service.h  asn1_types.h
src/Plugin/PluginAsn1Viewer/ui/: hex_view_widget.cpp  hex_view_widget.h  plugin_asn1_viewer.cpp  plugin_asn1_viewer.h  plugin_asn1_viewer.ui
src/Plugin/PluginBase64/: Base64Helper.cpp  Base64Helper.h  CMakeLists.txt  GlobalPluginBase64.hpp  PluginBase64.cpp  PluginBase64.h  PluginBase64.ui  resources.qrc
src/Plugin/PluginBase64/core/: base64_helper.cpp  base64_helper.h
src/Plugin/PluginBase64/ui/: plugin_base64_widget.cpp  plugin_base64_widget.h  plugin_base64_widget.ui
src/Plugin/PluginCertView/: CMakeLists.txt  CertSM2Helper.cpp  CertSM2Helper.h  GlobalPluginCertView.hpp  PluginCertView.cpp  PluginCertView.h  PluginCertView.ui  resources.qrc
src/Plugin/PluginCertificateChainParser/: CMakeLists.txt  global_plugin_certificate_chain_parser.hpp  plugin_certificate_chain_parser.cpp  plugin_certificate_chain_parser.h
src/Plugin/PluginCertificateChainParser/core/: certificate_chain_service.cpp  certificate_chain_service.h  certificate_chain_types.h
src/Plugin/PluginCertificateChainParser/ui/: certificate_chain_parser_widget.cpp  certificate_chain_parser_widget.h
src/Plugin/PluginCodeConvert/: CMakeLists.txt  GlobalCodeConvert.hpp  PluginCodeConvert.cpp  PluginCodeConvert.h  PluginCodeConvert.ui  resources.qrc
src/Plugin/PluginP7bCertificateChain/: CMakeLists.txt  global_plugin_p7b_certificate_chain.hpp  plugin_p7b_certificate_chain.cpp  plugin_p7b_certificate_chain.h
src/Plugin/PluginP7bCertificateChain/core/: p7b_certificate_chain_service.cpp  p7b_certificate_chain_service.h  p7b_certificate_chain_types.h
src/Plugin/PluginP7bCertificateChain/ui/: p7b_certificate_chain_widget.cpp  p7b_certificate_chain_widget.h
src/Plugin/PluginSm2CsrVerify/: CMakeLists.txt  global_plugin_sm2_csr_verify.hpp  plugin_sm2_csr_verify.cpp  plugin_sm2_csr_verify.h
src/Plugin/PluginSm2CsrVerify/core/: sm2_csr_verify_service.cpp  sm2_csr_verify_service.h  sm2_csr_verify_types.h
src/Plugin/PluginSm2CsrVerify/ui/: sm2_csr_verify_widget.cpp  sm2_csr_verify_widget.h
src/Plugin/PluginSm2Pkcs7Verify/: CMakeLists.txt  global_plugin_sm2_pkcs7_verify.hpp  plugin_sm2_pkcs7_verify.cpp  plugin_sm2_pkcs7_verify.h
src/Plugin/PluginSm2Pkcs7Verify/core/: sm2_pkcs7_verify_service.cpp  sm2_pkcs7_verify_service.h  sm2_pkcs7_verify_types.h
src/Plugin/PluginSm2Pkcs7Verify/ui/: sm2_pkcs7_verify_widget.cpp  sm2_pkcs7_verify_widget.h
src/Plugin/PluginSystemInfo/: CMakeLists.txt  global_plugin_system_info.hpp  plugin_system_info.cpp  plugin_system_info.h
src/Plugin/PluginSystemInfo/core/: system_info_service.cpp  system_info_service.h  system_info_types.h
src/Plugin/PluginSystemInfo/ui/: system_info_widget.cpp  system_info_widget.h
src/Plugin/PluginTest/: CMakeLists.txt  GlobalTest.hpp  PluginTest.cpp  PluginTest.h
src/Plugin/Test/: CMakeLists.txt  GlobalTest.hpp  Test.cpp  Test.h
src/Proto/: CMakeLists.txt
src/Proto/ProtoTest/: CMakeLists.txt  Person.pb.cc  Person.pb.h  Person.proto
src/Widget/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  PluginWidget.cpp  PluginWidget.h  Subscribe.cpp  Subscribe.h  app_win32.aps  main.cpp  resources.qrc
src/Widget/CertView/: CertView.cpp  CertView.h  CertView.ui  CertX509Helper.cpp  CertX509Helper.h
src/Widget/Manager/: LoggerManager.cpp  LoggerManager.h  LoggerSQLSink.h  PluginManager.cpp  PluginManager.h
